[Fix] Split message with limir : 2 and change the print in the receiver